FusionDev Backup1/src/objects/RMA_Disposition__c.object
<CustomObject>
    <fields>
        <fullName>Part_Num__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Num</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>RMA Dispositions</relationshipLabel>
        <relationshipName>RMA_Dispositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA Receipt</label>
        <referenceTo>YETIUNITY_RMA_Receipt__c</referenceTo>
        <relationshipLabel>RMA Dispositions</relationshipLabel>
        <relationshipName>RMA_Dispositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_Reason_Code__c</fullName>
        <label>Return Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00 - RMA</fullName>
                </value>
                <value>
                    <fullName>01 - Bowed Lid</fullName>
                </value>
                <value>
                    <fullName>02 - Ice Retention</fullName>
                </value>
                <value>
                    <fullName>03 - Not Sealing</fullName>
                </value>
                <value>
                    <fullName>04 - Leaking</fullName>
                </value>
                <value>
                    <fullName>05 - Porosity</fullName>
                </value>
                <value>
                    <fullName>06 - Delam</fullName>
                </value>
                <value>
                    <fullName>07 - Logo Error</fullName>
                </value>
                <value>
                    <fullName>08 - Shipping Error-Misc.</fullName>
                </value>
                <value>
                    <fullName>10 - Product Swap</fullName>
                </value>
                <value>
                    <fullName>11 - Refund</fullName>
                </value>
                <value>
                    <fullName>12 - Canceled Order</fullName>
                </value>
                <value>
                    <fullName>13 - Damaged in Shipping</fullName>
                </value>
                <value>
                    <fullName>14 - Lay-By Cancellation</fullName>
                </value>
                <value>
                    <fullName>15 - Component install on cooler</fullName>
                </value>
                <value>
                    <fullName>16 - Product Sample</fullName>
                </value>
                <value>
                    <fullName>17 - Defective-Lock</fullName>
                </value>
                <value>
                    <fullName>18 - Repair</fullName>
                </value>
                <value>
                    <fullName>19 - SCL Return</fullName>
                </value>
                <value>
                    <fullName>20 - Big Box Dealer Return</fullName>
                </value>
                <value>
                    <fullName>21 - Defective-Rambler</fullName>
                </value>
                <value>
                    <fullName>22 - Office Error-Wrong/No Ship To</fullName>
                </value>
                <value>
                    <fullName>23 - Office Error-Wrong item</fullName>
                </value>
                <value>
                    <fullName>24 - Office Error-Wrong qty</fullName>
                </value>
                <value>
                    <fullName>25 - Office Error-Wrong Ship Date</fullName>
                </value>
                <value>
                    <fullName>26 - Returned Shipment Refused</fullName>
                </value>
                <value>
                    <fullName>27 - Shipping Error-Wrong item</fullName>
                </value>
                <value>
                    <fullName>28 - Shipping Error-Wrong qty</fullName>
                </value>
                <value>
                    <fullName>29 - OutsideRep-Never Ordered</fullName>
                </value>
                <value>
                    <fullName>30 - OutsideRep-Wrong Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <label>Warehouse</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>RMA Disposition</label>
    <nameField>
        <label>RMA Disposition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMA Dispositions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>